2003-05-31  Vladimir Tsichevski  <wowa@jet.msk.su>

	* configure.in: Fix documentation typo AWT -> SAX2.

2003-05-31  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Use define_field instead of
	define_proc for define-procedure builtins for partial inlining.

2003-05-22  Per Bothner  <per@bothner.com>

	* kawa/lang/EqualPat.java (match):  Generalize 2003-04-21 fix
	to handle arbitrary String/Symbol pairs.  Fixes bugs reported
	05-19 by Sven Hartrumpf and 05-22 by Bruce Lewis.

	* kawa/standard/IfFeature.java (hasFeatureX):  Remove debug kludge.

	* kawa/standard/IfFeature.java (hasFeature):  Add new SRFIs.
	* kawa/standard/IfFeature.java (hasFeature):  Add 'kawa' feature.

	* kawa/standard/define.java (scanForDefinitions, rewriteForm):
	Handle names that are Symbols as well as Strings.  Fixes bug reported
	05-22 by Bruce Lewis "renamed identifiers in defines in macros" .

2003-05-18  Per Bothner  <per@bothner.com>

	* configure.in:  Set version to 1.7beta1.
	* build.xml (version.release):  Set to 1.7beta1.

	* Makefile.am (MAINTAINERCLEANFILES):  Add Version.java.

	* kawa/standard/letrec.java (rewrite):  Do setDefining on SetExp.

2003-05-17  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (setLineOf):  New method.
	(rewrite_with_position):  Use setLineOf.
	(rewrite_body):  Call pushPositionOf, popPositionOf.
	Call setLineOf on result.
	* kawa/kawa/Lambda.java (rewriteBody):  Don't allow a return type
	to be specified with just a string literal.
	If converting result, set line position of modified body.

2003-05-09  Per Bothner  <per@bothner.com>

	* configure.in:  Remove --with-java-collections arg and related crud.
	* build.xml (build.preprocessed):  Remove gnu/lists and QName.
	Remove no-longer-needed will-collections crud.
	* build.properties:  Remove with-collections.

	* build.xml (build.selectjava):  Add new gnu/lists classes.

2003-05-04  Per Bothner  <per@bothner.com>
